--- a/views/potting_customer_order_views.xml
+++ b/views/potting_customer_order_views.xml
@@ -18,8 +18,6 @@
                 <field name="contract_number" optional="show"/>
                 <field name="customer_id"/>
                 <field name="product_type"/>
-                <field name="campaign_id" optional="show"/>
-                <field name="campaign_period" column_invisible="1"/>
                 <field name="date_order" widget="date"/>
                 <field name="date_expected" widget="date" optional="show"/>
                 <field name="transit_order_count" string="OT"/>
@@ -74,8 +72,6 @@
                             <field name="company_id" invisible="1"/>
                             <field name="customer_id" options="{'no_create': True}"/>
                             <field name="product_type" required="1"/>
-                            <field name="campaign_id" options="{'no_create': True}"/>
-                            <field name="campaign_period" invisible="1"/>
                             <field name="date_order" widget="date"/>
                             <field name="date_expected" widget="date"/>
                         </group>
@@ -116,9 +112,6 @@
                                        groups="potting_management.group_potting_commercial,potting_management.group_potting_shipping,potting_management.group_potting_manager"/>
                                 <span class="text-muted">/T</span>
                             </div>
-                            <field name="official_cocoa_price" readonly="1" 
-                                   invisible="not use_official_price"/>
-                            <field name="use_official_price"/>
                             <field name="certification_ids" widget="many2many_tags"/>
                             <field name="certification_premium" readonly="1"/>
                         </group>
@@ -126,6 +119,26 @@
                             <field name="total_amount" readonly="1"/>
                             <field name="export_duty_rate"/>
                             <field name="export_duty_amount" readonly="1"/>
+                            <field name="net_amount" readonly="1"/>
+                        </group>
+                    </group>
+                    <!-- Section conversion devise société -->
+                    <group string="💱 Montants en devise société" 
+                           invisible="currency_id == company_currency_id"
+                           class="bg-light p-2 rounded">
+                        <group>
+                            <field name="company_currency_id" invisible="1"/>
+                            <field name="conversion_rate_display" readonly="1" 
+                                   string="Taux appliqué" 
+                                   class="text-info"/>
+                            <field name="total_amount_company_currency" readonly="1" 
+                                   string="Montant total converti"
+                                   class="fw-bold text-success"/>
+                        </group>
+                        <group>
+                            <field name="net_amount_company_currency" readonly="1" 
+                                   string="Montant net converti"
+                                   class="fw-bold text-primary"/>
                         </group>
                     </group>
                     <notebook>
