--- a/wizards/potting_import_contracts_wizard_views.xml
+++ b/wizards/potting_import_contracts_wizard_views.xml
@@ -33,7 +33,7 @@
                                     <i class="fa fa-info-circle"/> Import de contrats depuis Excel
                                 </h4>
                                 <p>
-                                    Cet assistant vous permet d'importer des contrats (commandes clients) 
+                                    Cet assistant vous permet d'importer des contrats (Contrats clients) 
                                     depuis un fichier Excel (.xlsx).
                                 </p>
                                 <hr/>
