First commit : HR management improving. API REST. DE Endpoint.

--- a/mobile_app/exportation/android/app/src/main/res/values/colors.xml
+++ b/mobile_app/exportation/android/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <!-- Fond -->
     <color name="icp_background">#F5F5F5</color>
     <color name="icp_surface">#FFFFFF</color>
+	<color name="ic_launcher_background">#5D4037</color>
 </resources>
